--- a/Common/src/main/resources/assets/swplanets/lang/en_us.json
+++ b/Common/src/main/resources/assets/swplanets/lang/en_us.json
@@ -17,29 +17,29 @@
   "gui.swplanets.text.galaxy_far_away": "The Galaxy",
   "solar_system.swplanets.outer_rims": "Outer Rims",
 
-  "advancements.pro_hyperspace.title": "A pro of the hyperspace !",
-  "advancements.pro_hyperspace.descr": "Visit all the planets in The Galaxy",
+  "advancements.pro_hyperspace.title": "A hyperspace pro!",
+  "advancements.pro_hyperspace.descr": "Visit all the planets in the galaxy",
 
-  "advancements.swplanets.title": "A new Galaxy",
-  "advancements.swplanets.descr": "Welcome to The Galaxy !",
+  "advancements.swplanets.title": "A new galaxy",
+  "advancements.swplanets.descr": "Welcome to The Galaxy!",
 
-  "advancements.find_kyber.title": "Ho ! It's shiny !",
-  "advancements.find_kyber.descr": "You just find a kyber crystal !",
+  "advancements.find_kyber.title": "Ho! It's shiny!",
+  "advancements.find_kyber.descr": "You just found a kyber crystal!",
 
-  "advancements.craft_saber.title": "May the force be with you !",
-  "advancements.craft_saber.descr": "You are now a Jedi ! Or maybe not...",
+  "advancements.craft_saber.title": "May the force be with you!",
+  "advancements.craft_saber.descr": "You are now a Jedi! Or, something else...",
 
-  "advancements.beskar.title": "An other way !",
-  "advancements.beskar.descr": "You find beskar !",
+  "advancements.beskar.title": "Another way!",
+  "advancements.beskar.descr": "You found beskar!",
 
-  "advancements.mandalorian.title": "This is the way !",
-  "advancements.mandalorian.descr": "You become a mandalorian",
+  "advancements.mandalorian.title": "This is the way!",
+  "advancements.mandalorian.descr": "You became a mandalorian!",
 
   "item.swplanets.star_wars_opening_music_disc": "Music Disc",
   "item.swplanets.star_wars_opening_music_disc.desc": "John Williams - Star Wars Opening",
   "item.swplanets.kyber_crystal": "Kyber Crystal",
   "item.swplanets.kyber_crystal_ore": "Kyber Crystal Ore",
-  "item.swplanets.kyber_crystal_ore_sandstone": "Sandstone Kyber Crystal Ore ",
+  "item.swplanets.kyber_crystal_ore_sandstone": "Sandstone Kyber Crystal Ore",
   "item.swplanets.mustafar_stone": "Mustafar Stone",
   "item.swplanets.mustafar_sand": "Mustafar Sand",
 
@@ -56,13 +56,13 @@
   "item.swplanets.light_saber_dark_maul": "Darth Maul's lightsaber ",
   "item.swplanets.light_saber_kylo_ren": "Kylo Ren's lightsaber ",
 
-  "item.swplanets.star_manual": "Star Manual ",
+  "item.swplanets.star_manual": "Star Manual",
 
   "item.swplanets.blaster": "Blaster",
   "item.swplanets.blaster_zoom": "Blaster",
 
   "item.swplanets.stormtrooper_mask": "Stormtrooper Helmet",
-  "item.swplanets.stormtrooper_chestplate": "Stormtrooper ChestPlate",
+  "item.swplanets.stormtrooper_chestplate": "Stormtrooper Chestplate",
   "item.swplanets.stormtrooper_leggings": "Stormtrooper Legging",
   "item.swplanets.stormtrooper_boots": "Stormtrooper Boots",
   "item.swplanets.plastic_plate": "Plastic Plate ",
@@ -74,23 +74,23 @@
 
 
   "item.swplanets.beskar_armor_helmet": "Beskar Helmet",
-  "item.swplanets.beskar_armor_chestplate": "Beskar ChestPlate",
+  "item.swplanets.beskar_armor_chestplate": "Beskar Chestplate",
   "item.swplanets.beskar_armor_leggings": "Beskar Legging",
   "item.swplanets.beskar_armor_boots": "Beskar Boots",
 
   "entity.swplanets.speeder": "Speeder",
 
   "tooltip.swplanets.jedilightsaber.tooltip.shift": "A weapon used by the greatest §1Jedi",
-  "tooltip.swplanets.jedilightsaber.tooltip.shift.two": "May the force be with you !",
+  "tooltip.swplanets.jedilightsaber.tooltip.shift.two": "May the force be with you!",
 
   "tooltip.swplanets.sithlightsaber.tooltip.shift": "A weapon used by the darkest §4Sith",
-  "tooltip.swplanets.sithlightsaber.tooltip.shift.two": "Join the dark side of the force !",
+  "tooltip.swplanets.sithlightsaber.tooltip.shift.two": "Join the dark side of the force!",
 
 
 
   "block.swplanets.kyber_crystal_ore": "Kyber Crystal Ore",
   "block.swplanets.kyber_crystal_cluster": "Kyber Crystal Cluster",
-  "block.swplanets.kyber_crystal_ore_sandstone": "Sandstone Kyber Crystal Ore ",
+  "block.swplanets.kyber_crystal_ore_sandstone": "Sandstone Kyber Crystal Ore",
   "block.swplanets.mustafar_stone": "Mustafar Stone",
   "block.swplanets.mustafar_sand": "Mustafar Sand",
   "block.swplanets.beskar_ore_sandstone": "Beskar Ore",
@@ -122,15 +122,15 @@
 
 
   "tooltip.swplanets.shift": "§7Hold §6§oShift §7for more informations",
-  "tooltip.swplanets.blaster.lifetime.shift": "§7Laser lifetime : §6§o%s",
-  "tooltip.swplanets.blaster.zoom.shift": "§7Zoom : §6§o%s",
+  "tooltip.swplanets.blaster.lifetime.shift": "§7Laser lifetime: §6§o%s",
+  "tooltip.swplanets.blaster.zoom.shift": "§7Zoom: §6§o%s",
 
 
   "sounds.swplanets.blaster_sound": "Blaster Sound",
   "sounds.swplanets.saber_attack_sound": "Saber Attack Sound",
 
   "config.swplanets.title": "Star Wars Planets",
-  "config.swplanets.description": "May the force be with you !",
+  "config.swplanets.description": "May the force be with you!",
   "config.swplanets.explosionUpgradeRadius": "Explosion Upgrade Radius",
   "config.swplanets.explosionUpgradeFire": "Explosion Upgrade Fire",
   "config.swplanets.lightSabersAttackModifier": "Light Sabers Attack Modifier",
