Fix "leggings" being writtens as "legging"

--- a/Common/src/main/resources/assets/swplanets/lang/en_us.json
+++ b/Common/src/main/resources/assets/swplanets/lang/en_us.json
@@ -63,7 +63,7 @@
 
   "item.swplanets.stormtrooper_mask": "Stormtrooper Helmet",
   "item.swplanets.stormtrooper_chestplate": "Stormtrooper Chestplate",
-  "item.swplanets.stormtrooper_leggings": "Stormtrooper Legging",
+  "item.swplanets.stormtrooper_leggings": "Stormtrooper Leggings",
   "item.swplanets.stormtrooper_boots": "Stormtrooper Boots",
   "item.swplanets.plastic_plate": "Plastic Plate ",
   "item.swplanets.speeder": "Speeder",
@@ -75,7 +75,7 @@
 
   "item.swplanets.beskar_armor_helmet": "Beskar Helmet",
   "item.swplanets.beskar_armor_chestplate": "Beskar Chestplate",
-  "item.swplanets.beskar_armor_leggings": "Beskar Legging",
+  "item.swplanets.beskar_armor_leggings": "Beskar Leggings",
   "item.swplanets.beskar_armor_boots": "Beskar Boots",
 
   "entity.swplanets.speeder": "Speeder",
