--- a/Common/src/main/resources/assets/swplanets/lang/en_us.json
+++ b/Common/src/main/resources/assets/swplanets/lang/en_us.json
@@ -88,14 +88,15 @@
   "tooltip.swplanets.sithlightsaber.tooltip.shift": "A weapon used by the darkest §4Sith",
   "tooltip.swplanets.sithlightsaber.tooltip.shift.two": "Join the dark side of the force!",
 
-
-
   "block.swplanets.kyber_crystal_ore": "Kyber Crystal Ore",
   "block.swplanets.kyber_crystal_cluster": "Kyber Crystal Cluster",
   "block.swplanets.kyber_crystal_ore_sandstone": "Sandstone Kyber Crystal Ore",
   "block.swplanets.mustafar_stone": "Mustafar Stone",
   "block.swplanets.mustafar_sand": "Mustafar Sand",
   "block.swplanets.beskar_ore_sandstone": "Beskar Ore",
+  "block.swplanets.tatooine_stone": "Tatooine Stone",
+  "block.swplanets.tatooine_stone_slab": "Tatooine Stone Slab",
+  "block.swplanets.tatooine_stone_stairs": "Tatooine Stone Stairs",
 
   "block.swplanets.blaster_upgrader": "Blaster Upgrader",
 
